--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_API_KEY='6120474371:AAGS6ITDKD1lJaWHWA1fGbNIFbu8BiDlVD0'
-OPENAI_API_KEY='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'
-USER_KEY='479771413'
+BOT_API_KEY=''
+OPENAI_API_KEY=''
+USER_KEY=''
